--- a/demo/tasks.yml
+++ b/demo/tasks.yml
@@ -18,6 +18,8 @@
     memory_size: 128
     publish: true
     code: 'attemptEvaluate'
+  register:
+    - 'test needed'
 - name: Resource /attempt/evaluate
   api-resource:
     api: 'afd'
@@ -39,7 +41,17 @@
     stage_name: 'devel'
   when:
     - 'deployment needed'
-
+  register:
+    - 'test needed'
+- api-test:
+    api: 'afd'
+    path: '/attempt/evaluatexx'
+    method: 'POST'
+    stage_name: 'devel'
+    request: ''
+    response: {'message': 'Hello world'}
+  when:
+    - 'test needed'
 - dynamo-table:
     name: 'reservation'
     source: 'sample_table_reservation.yml'
