--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "aws_auto",
-  "version": "0.1.0",
+  "version": "0.8.9",
   "description": "AWS auto deploy",
   "author": "CEE Systems",
   "license": "ISC",
   "bin": "play",
-  "devDependencies": {
-  },
   "dependencies": {
+    "babel-cli": "^6.16.0",
+    "babel-preset-es2015-node4": "^2.1.0"
   }
 }
